# klepp-backend

./: .dockerignore  .env.example  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Procfile  README.md  docker-compose.yaml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  runtime.txt
app/: main.py
app/api/: dependencies.py  security.py  services.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: file.py  summaries.py
app/api/api_v2/: api.py
app/api/api_v2/endpoints/: delete.py  file.py  like.py  list_videos.py  patch_video.py  tags.py  upload.py  user_thumbnail.py  user_update.py  users.py
app/api/api_v2/endpoints/video/: delete.py  list_videos.py  patch_video.py  upload.py
app/core/: config.py  db.py  logging_config.py
app/db/: db_init.py  summaries_crud.py
app/models/: klepp.py  tortoise.py  user.py
app/render/: urls.py  video_player.py
app/schemas/: file.py  user.py
app/schemas/schemas_v1/: file.py
app/schemas/schemas_v2/: api_key.py
ci/: Dockerfile  entrypoint.sh
dev/app/: Dockerfile  entrypoint.sh
dev/db/: Dockerfile
migrations/: README  env.py
migrations/versions/: 1849bb6b7e57_add_thumbnail_uri.py  2c6b1a675f96_add_video_table.py  39c1fdf365c0_uploaded_at.py  3ce3da92f858_db_v1.py  474aa428741b_like.py  55632ac588ff_likes.py  8c0323338f67_user_tag_video.py  a1b2c3d4e5f6_timestamp_with_timezone.py  bb761dee7bcd_api_key.py
templates/: 404.html  video.html
tests/: conftest.py
tests/api_v1/: test_summaries.py
