[tool.poetry]
name = "klepp"
version = "0.1.0"
description = "API for uploading/deleting S3 files"
authors = [
    "Jonas Krüger Svensson <jonas-ks@hotmail.com>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.2"
fastapi = ">=0.72.0"
cryptography = ">=35.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
uvicorn = {extras = ["standard"], version = "^0.13.4"}
python-multipart = "^0.0.5"
aiobotocore = "^2.1.0"
aioboto3 = "^9.3.1"
httpx = "^0.21.3"
pydantic = "1.9.0"
gunicorn = "^20.1.0"
typed-ast = "^1.5.2"
alembic = "^1.7.6"
sqlmodel = "^0.0.6"
asgi-correlation-id = "^1.1.2"
asyncpg = "^0.25.0"
greenlet = "^1.1.2"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.3"
black = "^20.8b1"
isort = "^5.8.0"
mypy = ">=0.812"
ipython = "^8.1.1"

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
    (\.eggs|\.git|\.hg|\.mypy_cache|\.tox|\.venv|\venv|\.github|\docs|\tests|\__pycache__)
)
'''

[tool.isort]
profile = "black"
src_paths = ["app"]
combine_as_imports = true
line_length = 120
sections = [
    'FUTURE',
    'STDLIB',
    'THIRDPARTY',
    'FIRSTPARTY',
    'LOCALFOLDER',
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
